k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickshaw-app
  labels:
    app: rickshaw
spec:
  selector:
    app: rickshaw
    tier: app
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickshaw-app
  labels:
    app: rickshaw
spec:
  selector:
    matchLabels:
      app: rickshaw
      tier: app
  replicas: 2
  template:
    metadata:
      labels:
        app: rickshaw
        tier: app
    spec:
      containers:
      - name: ecgo
        image: registry:5000/api:v0.1.0
        args: [ "--port", "80" ]
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: 16Mi
            cpu: 100m
          limits:
            memory: 32Mi
            cpu: 100m
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          httpGet:
            path: /healthcheck?type=liveness
            port: http
