k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickshaw-db
  labels:
    app: rickshaw
    tier: db
spec:
  ports:
    - port: 3306
  selector:
    app: rickshaw
    tier: db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickshaw-db
  labels:
    app: rickshaw
spec:
  selector:
    matchLabels:
      app: rickshaw
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rickshaw
        tier: db
    spec:
      containers:
      - image: percona:8.0
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-config
