k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickshaw-web
  labels:
    app: rickshaw
    tier: web
spec:
  selector:
    app: rickshaw
    tier: web
  ports:
  - name: http
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickshaw-web
  labels:
    app: rickshaw
spec:
  selector:
    matchLabels:
      app: rickshaw
      tier: web
  replicas: 2
  template:
    metadata:
      labels:
        app: rickshaw
        tier: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: 16Mi
            cpu: 100m
          limits:
            memory: 32Mi
            cpu: 100m
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          httpGet:
            path: /healthcheck.html?type=liveness
            port: http
        volumeMounts:
        - name: nginx-root
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-root
        configMap:
          name: nginx-root-config
